Fix not centered sections

--- a/style.css
+++ b/style.css
@@ -17,7 +17,9 @@ h3{
 }
 
 .rounded{
-  display: inline-block;
+  display: block;
+  margin: 20px auto;
+  width: fit-content;
   background-color: white;
   border-color: rgba(9,9,121,1);
   background: linear-gradient(90deg,rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 15%, rgba(0, 212, 255, 1) 100%);
